--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The server side for a react-redux voting app.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --require ./test/testHelper.js --recursive",
+    "test": "mocha --compilers js:babel-core/register --require ./test/index.js --recursive",
     "test:watch": "yarn run test -- --watch"
   },
   "babel": {
