added Redux (actions, reducer and store functionality)

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chai": "^3.5.0",
     "chai-immutable": "^1.6.0",
     "immutable": "^3.8.1",
-    "mocha": "^3.3.0"
+    "mocha": "^3.3.0",
+    "redux": "^3.6.0"
   }
 }
