--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "voteServer",
   "version": "1.0.0",
   "description": "The server side for a react-redux voting app.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./test/index.js --recursive",
-    "test:watch": "yarn run test -- --watch"
+    "test:watch": "yarn run test -- --watch",
+    "start": "babel-node index.js"
   },
   "babel": {
     "presets": [
@@ -30,6 +31,7 @@
     "chai-immutable": "^1.6.0",
     "immutable": "^3.8.1",
     "mocha": "^3.3.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "socket.io": "^1.7.4"
   }
 }
