--- a/package.json
+++ b/package.json
@@ -1,37 +1,48 @@
 {
-  "name": "voteServer",
+  "name": "voteApp",
   "version": "1.0.0",
-  "description": "The server side for a react-redux voting app.",
-  "main": "server.js",
+  "description": "A react-redux voting app.",
+  "author": "Ivan Georgiev",
+  "license": "MIT",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --require ./test/index.js --recursive",
-    "test:watch": "yarn run test -- --watch",
-    "start": "babel-node index.js"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "test:server": "mocha --compilers js:babel-core/register --require ./test/serverTest/index.js --recursive ./test/serverTest",
+    "test:client": "mocha --compilers js:babel-core/register --require ./test/clientTest/index.js --recursive ./test/clientTest",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
+    "server": "babel-node server/index.js",
+    "dev": "webpack-dev-server --hot --history-api-fallback --open"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ivangeorgiew/voteServer.git"
   },
-  "author": "Ivan Georgiev",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ivangeorgiew/voteServer/issues"
-  },
-  "homepage": "https://github.com/ivangeorgiew/voteServer#readme",
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.24.1",
     "chai": "^3.5.0",
     "chai-immutable": "^1.6.0",
+    "classnames": "^2.2.5",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.28.0",
+    "express": "^4.15.2",
+    "file-loader": "^0.11.1",
     "immutable": "^3.8.1",
+    "jsdom": "^10.1.0",
     "mocha": "^3.3.0",
+    "node-sass": "^4.5.2",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-hot-loader": "^3.0.0-beta.6",
     "redux": "^3.6.0",
-    "socket.io": "^1.7.4"
+    "sass-loader": "^6.0.3",
+    "socket.io": "^1.7.4",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
