--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "mocha --compilers js:babel-core/register --require ./test/index.js --recursive",
     "build": "cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
     "start": "babel-node server.js",
-    "dev": "webpack-dev-server --hot --history-api-fallback --open"
+    "dev": "webpack-dev-server --history-api-fallback --open"
   },
   "repository": {
     "type": "git",
