--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Ivan Georgiev",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --require ./test/index.js --recursive",
+    "test": "mocha --compilers js:babel-core/register  --recursive",
     "build": "cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
     "start": "babel-node server.js",
     "dev": "webpack-dev-server --history-api-fallback --open"
@@ -14,29 +14,30 @@
     "type": "git",
     "url": "git+https://github.com/ivangeorgiew/voteServer.git"
   },
+  "babel": {
+    "presets": [
+      "latest",
+      "react"
+    ]
+  },
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
-    "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "chai": "^3.5.0",
-    "chai-immutable": "^1.6.0",
-    "classnames": "^2.2.5",
     "cross-env": "^3.1.3",
     "css-loader": "^0.28.0",
     "express": "^4.15.2",
     "file-loader": "^0.11.1",
-    "immutable": "^3.8.1",
-    "jsdom": "^10.1.0",
     "mocha": "^3.3.0",
     "node-sass": "^4.5.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
-    "react-hot-loader": "^3.0.0-beta.6",
+    "react-redux": "^5.0.4",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "sass-loader": "^6.0.3",
     "socket.io": "^1.7.4",
