--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register  --recursive",
     "build": "cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
-    "start": "babel-node server.js",
-    "dev": "webpack-dev-server --history-api-fallback --open",
-    "server": "babel-node devServer.js"
+    "start": "babel-node server/index.js",
+    "dev": "webpack-dev-server --history-api-fallback --open"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ivangeorgiew/voteServer.git"
+    "url": "git+https://github.com/ivangeorgiew/voteApp.git"
   },
   "babel": {
     "presets": [
@@ -42,6 +41,7 @@
     "redux": "^3.6.0",
     "sass-loader": "^6.0.3",
     "socket.io": "^1.7.4",
+    "socket.io-client": "^2.0.1",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
