--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Ivan Georgiev",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register  --recursive",
     "build": "cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
+    "server": "nodemon server/index.js --exec babel-node --presets latest,react",
     "start": "babel-node server/index.js",
     "dev": "webpack-dev-server --history-api-fallback --open"
   },
@@ -26,12 +26,10 @@
     "babel-loader": "^6.4.1",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
-    "chai": "^3.5.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.28.0",
     "express": "^4.15.2",
     "file-loader": "^0.11.1",
-    "mocha": "^3.3.0",
     "node-sass": "^4.5.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
