--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
     "server": "nodemon server/index.js --exec babel-node --presets latest,react",
-    "start": "babel-node server/index.js",
+    "start": "PORT=3000 babel-node server/index.js",
     "dev": "webpack-dev-server --history-api-fallback --open"
   },
   "repository": {
