--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "style-loader": "^0.16.1",
     "uglify-js": "^3.0.4",
     "url-loader": "^0.5.8",
+    "uuid": "^3.0.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   }
