--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
       "react"
     ]
   },
+  "engines": {
+    "node": "6.9.1"
+  },
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
