--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
+    "redux-saga": "^0.15.3",
     "sass-loader": "^6.0.3",
     "socket.io": "^1.7.4",
     "socket.io-client": "^2.0.1",
